<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fondo2"
    tools:context="com.example.dell.proyecto_final_one.InternetActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    android:alpha="0.89">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/descargas"
            android:textColor="@color/primaryTextColor"
            android:textSize="25dp"/>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/libro1"
            android:onClick="libro1"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/letradescarga"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/libro1"
            android:textSize="@dimen/letradescarga"
            android:textColor="@color/primaryTextColor"
            android:onClick="libro2"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/libro2"
            android:onClick="libro3"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/letradescarga"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/libro3"
            android:onClick="libro4"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/letradescarga"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/libro5"
            android:onClick="libro5"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/letradescarga"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/libro6"
            android:onClick="libro6"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/letradescarga"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/libro7"
            android:onClick="libro7"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/letradescarga"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/libro8"
            android:onClick="libro8"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/letradescarga"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/libro9"
            android:onClick="libro9"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/letradescarga"/>
<ImageButton
    android:id="@+id/face"
    android:layout_width="50dp"
    android:layout_height="50dp"
    android:background="@drawable/face"
    android:onClick="Face"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/face"
            android:gravity="center"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/sub"
            android:onClick="face2"/>
    </LinearLayout>
</ScrollView>
    </LinearLayout>
</LinearLayout>
</LinearLayout>