<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_splashscreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="465dp"
    android:orientation="vertical"
    android:gravity="center">
    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/logo" />
    <TextView
        android:id="@+id/a"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bienvenido"
        android:textSize="@dimen/bienvenido"
        android:gravity="center"
        android:textColor="@color/colorAccent"/>

    <TextView
        android:id="@+id/b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="#000"
        android:textSize="@dimen/Appcontac"
        android:textStyle="bold" />


</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:gravity="bottom"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/uno"
            android:lineSpacingMultiplier="0.9"
            android:gravity="center"
            android:textSize="@dimen/sub"
            android:textColor="#000"/>
    </LinearLayout>
</LinearLayout>
